--- a/frontend/src/lib/latex/styles/renderPreview.css
+++ b/frontend/src/lib/latex/styles/renderPreview.css
@@ -1,7 +1,7 @@
 /* 导入自定义字体 */
 @font-face {
   font-family: 'WenYuan';
-  src: url('../../font/WenYuanSerifSC-Regular.ttf') format('truetype');
+  src: url('/font/WenYuanSerifSC-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap; /* 优化字体加载 */
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: 'WenYuan';
-  src: url('../../font/WenYuanSerifSC-Bold.ttf') format('truetype');
+  src: url('/font/WenYuanSerifSC-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
   font-display: swap; /* 优化字体加载 */
